linked gallery and refactored two css files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/homepage-style.css"> <!---For the sake of the nav-bar--->
+    <link rel="stylesheet" href="CSS/homepage-style.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/regular/style.css"/>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/fill/style.css"/>
     <title>Home - Mon Andrei Obillo</title>
@@ -20,7 +20,7 @@
         <div class="nav-links">
             <a href="Biography/biography.html">About Me</a>
             <a href="#blogs">Blogs</a>
-            <a href="Images/gallery.html">Photos</a>
+            <a href="Images/gallery.html">Gallery</a>
             <a href="#contact-info" class="contact-me" target="_blank">Contact Me</a>
         </div>
     </nav>
