--- a/Biography/biography.html
+++ b/Biography/biography.html
@@ -18,8 +18,8 @@
             <i class="ph ph-list"></i> </label>
         <div class="nav-links">
             <a href="../index.html#">Home</a>
-            <a href="biography.html">About Me</a>
             <a href="../index.html#blogs">Blogs</a>
+            <a href="../Images/gallery.html">Gallery</a>
             <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
         </div>
     </nav>
