--- a/MediaPages/film.html
+++ b/MediaPages/film.html
@@ -5,9 +5,24 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="../CSS/media-page-style.css">
+    <title>Favorite Films - Obillo</title>
 </head>
 <body>
+<nav>
+    <div class="nav-logo">
+        <p>Mon Andrei Obillo</p>
+    </div>
+    <input type="checkbox" id="menu-toggle" class="menu-checkbox">
 
+    <label for="menu-toggle" class="menu-symbol">
+        <i class="ph ph-list"></i> </label>
+    <div class="nav-links">
+        <a href="../index.html#">Home</a>
+        <a href="../index.html#blogs">Blogs</a>
+        <a href="../Images/gallery.html">Gallery</a>
+        <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
+    </div>
+</nav>
 </body>
 </html>
