added spotify iframes to beats

--- a/MediaPages/beats.html
+++ b/MediaPages/beats.html
@@ -9,20 +9,53 @@
     <title>My Beats - Obillo</title>
 </head>
 <body>
-<nav>
-    <div class="nav-logo">
-        <p>Mon Andrei Obillo</p>
-    </div>
-    <input type="checkbox" id="menu-toggle" class="menu-checkbox">
+    <nav>
+        <div class="nav-logo">
+            <p>Mon Andrei Obillo</p>
+        </div>
+        <input type="checkbox" id="menu-toggle" class="menu-checkbox">
 
-    <label for="menu-toggle" class="menu-symbol">
-        <i class="ph ph-list"></i> </label>
-    <div class="nav-links">
-        <a href="../index.html#">Home</a>
-        <a href="../index.html#blogs">Blogs</a>
-        <a href="../Images/gallery.html">Gallery</a>
-        <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
+        <label for="menu-toggle" class="menu-symbol">
+            <i class="ph ph-list"></i> </label>
+        <div class="nav-links">
+            <a href="../index.html#">Home</a>
+            <a href="../index.html#blogs">Blogs</a>
+            <a href="../Images/gallery.html">Gallery</a>
+            <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
+        </div>
+    </nav>
+    <div class="content">
+        <h1>My Beats</h1>
+        <h4>My favorite songs and music that represents me and resonates with me.</h4>
+        <div class="media-container">
+            <div class="media-item">
+                <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/2hloaUoRonYssMuqLCBLTX?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <div class="media-item">
+                <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/4E63weMCaNZuGPEFMnuEi8?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <div class="media-item">
+                <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/5WQQIDU3HRaMyPkob8mpFb?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <div class="media-item">
+                <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/3B4etxytImrRKQgV3XHjnR?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <div class="media-item">
+                <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/6dgUya35uo964z7GZXM07g?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <div class="media-item">
+                <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/0LqbLHWFiy0qTfpk1Q1Ggc?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <div class="media-item"><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/7KNmIjcmGJIBrhP2s5Vioe?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+            <div class="media-item"><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/0iO2iCAjtX0t5duvczNQt6?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+            <div class="media-item"><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/4kV4N9D1iKVxx1KLvtTpjS?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+            <div class="media-item"><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/3Tc57t9l2O8FwQZtQOvPXK?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+            <div class="media-item"><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/20R4HfKloPKgXDqU7UKk3x?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+            <div class="media-item"><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/0WdR2AyLW1Drd3OUdwezM0?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+            <div class="media-item"><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/3YUMWmx8EJq0DurfuIwoGh?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+            <div class="media-item"><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/3THVfoVD5kdCxPviVaCPi7?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+        </div>
     </div>
-</nav>
+    <a href="#" class="back-to-top" id="back-to-top">Back to Top &#8593;</a>
 </body>
 </html>
