added initial section for media in homepage

--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
         <h1>Talents & Skills</h1>
         <p>Coming Soon</p>
     </div>
+    <div class="purple-section" id="my-favorites">
+        <div class="section-text">
+            <h1>My Favorites</h1>
+            <p>My favorite music, movies, and tv shows.</p>
+        </div>
+        <div class="favorite-cards">
+            <a href = "MediaPages/beats.html" class="favorite-card-item" id="beats">Music</a>
+            <a href = "MediaPages/films.html" class="favorite-card-item" id="films">Movies</a>
+            <a href = "MediaPages/tv-shows.html" class="favorite-card-item" id="tv-shows">TV Shows</a>
+        </div>
+    </div>
     <footer id="contact-info">
         <p>Contact Information:</p>
         <div style="display:flex; flex-wrap:wrap; gap:20px">
