fixed more things for media

--- a/index.html
+++ b/index.html
@@ -73,11 +73,7 @@
             </a>
         </div>
     </div>
-    <div class="cream-section coming-soon" id="talents-and-skills">
-        <h1>Talents & Skills</h1>
-        <p>Coming Soon</p>
-    </div>
-    <div class="purple-section" id="my-favorites">
+    <div class="cream-section" id="my-favorites">
         <div class="section-text">
             <h1>My Favorites</h1>
             <p>My favorite music, movies, and tv shows.</p>
@@ -88,6 +84,11 @@
             <a href = "MediaPages/tv-shows.html" class="favorite-card-item" id="tv-shows">TV Shows</a>
         </div>
     </div>
+    <div class="purple-section coming-soon" id="talents-and-skills">
+        <h1>Talents & Skills</h1>
+        <p>Coming Soon</p>
+    </div>
+    
     <footer id="contact-info">
         <p>Contact Information:</p>
         <div style="display:flex; flex-wrap:wrap; gap:20px">
