--- a/MediaPages/beats.html
+++ b/MediaPages/beats.html
@@ -26,7 +26,7 @@
     </nav>
     <div class="content">
         <h1>My Beats</h1>
-        <h4>My favorite songs and music that gives me joy and resonates with me.</h4>
+        <h4>My favorite songs and music that gives me joy and resonates with me. <br><br></h4>
         <div class="media-container">
             <div class="media-item">
                 <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/2hloaUoRonYssMuqLCBLTX?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
