fixed links in index for media

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         </div>
         <div class="favorite-cards">
             <a href = "MediaPages/beats.html" class="favorite-card-item" id="beats">Music</a>
-            <a href = "MediaPages/films.html" class="favorite-card-item" id="films">Movies</a>
-            <a href = "MediaPages/tv-shows.html" class="favorite-card-item" id="tv-shows">TV Shows</a>
+            <a href = "MediaPages/film.html" class="favorite-card-item" id="films">Movies</a>
+            <a href = "MediaPages/tv.html" class="favorite-card-item" id="tv-shows">TV Shows</a>
         </div>
     </div>
     <div class="purple-section coming-soon" id="talents-and-skills">
