added information in film

--- a/MediaPages/film.html
+++ b/MediaPages/film.html
@@ -24,5 +24,49 @@
         <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
     </div>
 </nav>
+<div class="content">
+    <h1>My Movies</h1>
+    <h4>A collection of my all-time favorite movies. <br><br></h4>
+    <div class="media-container">
+        <div class="media-item">
+            <div class="video">
+                <iframe 
+                    src="https://www.youtube.com/embed/amgPXKrFZVg?si=S4807bkw2lVt3MVM" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+            <h2>Wicked (2024)</h2>
+            <p><b>Description: <br></b>Misunderstood because of her green skin, a young woman named Elphaba forges an unlikely but profound friendship with Glinda, a student with an unflinching desire for popularity. Following an encounter with The Wizard of Oz, their relationship soon reaches a crossroad as their lives begin to take very different paths. <br>
+            <br><b>Release date:</b> November 22, 2024 (USA)
+            <br><b>Director:</b> Jon M. Chu
+            <br><b>Running time:</b> 2h 40m</p>
+            <img src="https://upload.wikimedia.org/wikipedia/en/3/3c/Wicked_%282024_film%29_poster.png" alt="Wicked Movie Poster">
+            <p><b>Source:</b> Wikipedia</p>
+        </div>
+        <div class="media-item">
+            <div class="video">
+                <iframe 
+                    src="https://www.youtube.com/embed/R2Dxx3_iF14?si=8QYRtvx7-2n0I_NW"
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+            <h2>Sophie's Choice (1982)</h2>
+            <p><b>Description: <br></b>Stingo (Peter MacNicol), a young writer, moves to Brooklyn in 1947 to begin work on his first novel. As he becomes friendly with Sophie (Meryl Streep) and her lover Nathan (Kevin Kline), he learns that Sophie is a Holocaust survivor. Flashbacks reveal her harrowing story, from pre-war prosperity to Auschwitz. In the present, Sophie and Nathan's relationship increasingly unravels as Stingo grows closer to Sophie and Nathan's fragile mental state becomes ever more apparent. <br>
+            <br><b>Release date:</b> December 11, 1982 (USA)
+            <br><b>Director:</b> Alan J. Pakula
+            <br><b>Running time:</b> 2h 30m</p>
+            <img src="https://play-lh.googleusercontent.com/4wGAniVc2OEI1OyQc50ozvmue3j0FyObrr4zaEOdzHuQ5FfS7JrdnfU7nTQzKqsB9Qos" alt="Sophie's Choice Movie Poster">
+            <p><b>Source:</b> Google Play Movies</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
