--- a/MediaPages/film.html
+++ b/MediaPages/film.html
@@ -41,6 +41,7 @@
             </div>
             <h2>Wicked (2024)</h2>
             <p><b>Description: <br></b>Misunderstood because of her green skin, a young woman named Elphaba forges an unlikely but profound friendship with Glinda, a student with an unflinching desire for popularity. Following an encounter with The Wizard of Oz, their relationship soon reaches a crossroad as their lives begin to take very different paths. <br>
+            <br><b>Genre:</b> Musical, Fantasy, Comedy
             <br><b>Release date:</b> November 22, 2024 (USA)
             <br><b>Director:</b> Jon M. Chu
             <br><b>Running time:</b> 2h 40m</p>
@@ -60,6 +61,7 @@
             </div>
             <h2>Sophie's Choice (1982)</h2>
             <p><b>Description: <br></b>Stingo (Peter MacNicol), a young writer, moves to Brooklyn in 1947 to begin work on his first novel. As he becomes friendly with Sophie (Meryl Streep) and her lover Nathan (Kevin Kline), he learns that Sophie is a Holocaust survivor. Flashbacks reveal her harrowing story, from pre-war prosperity to Auschwitz. In the present, Sophie and Nathan's relationship increasingly unravels as Stingo grows closer to Sophie and Nathan's fragile mental state becomes ever more apparent. <br>
+            <br><b>Genre:</b> Historical Fiction, Drama
             <br><b>Release date:</b> December 11, 1982 (USA)
             <br><b>Director:</b> Alan J. Pakula
             <br><b>Running time:</b> 2h 30m</p>
