added film actors

--- a/MediaPages/film.html
+++ b/MediaPages/film.html
@@ -40,7 +40,7 @@
                 </iframe>
             </div>
             <h2>Wicked (2024)</h2>
-            <p><b>Description: <br></b>Misunderstood because of her green skin, a young woman named Elphaba forges an unlikely but profound friendship with Glinda, a student with an unflinching desire for popularity. Following an encounter with The Wizard of Oz, their relationship soon reaches a crossroad as their lives begin to take very different paths. <br>
+            <p><b>Description: <br></b>Misunderstood because of her green skin, a young woman named Elphaba (Cynthia Erivo) forges an unlikely but profound friendship with Glinda (Ariana Grande), a student with an unflinching desire for popularity. Following an encounter with The Wizard of Oz, their relationship soon reaches a crossroad as their lives begin to take very different paths. <br>
             <br><b>Genre:</b> Musical, Fantasy, Comedy
             <br><b>Release date:</b> November 22, 2024 (USA)
             <br><b>Director:</b> Jon M. Chu
