--- a/MediaPages/film.html
+++ b/MediaPages/film.html
@@ -19,6 +19,7 @@
         <i class="ph ph-list"></i> </label>
     <div class="nav-links">
         <a href="../index.html#">Home</a>
+        <a href="../Biography/biography.html">About Me</a>
         <a href="../index.html#blogs">Blogs</a>
         <a href="../Images/gallery.html">Gallery</a>
         <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
@@ -70,5 +71,6 @@
         </div>
     </div>
 </div>
+<a href="#" class="back-to-top" id="back-to-top">Back to Top &#8593;</a>
 </body>
 </html>
