--- a/MediaPages/tv.html
+++ b/MediaPages/tv.html
@@ -25,5 +25,47 @@
         <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
     </div>
 </nav>
+<div class="content">
+    <h1>My TV Shows</h1>
+    <h4>A collection of my all-time favorite TV shows. <br><br></h4>
+    <div class="media-container">
+        <div class="media-item">
+            <div class="video"><iframe src="https://www.youtube.com/embed/SHMM4abUWfk?si=g5f02LioHKIhPRfd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <h2>WandaVision (2021)</h2>
+            <p><b>Description: <br></b>Living idealized suburban lives, super-powered beings Wanda (Elizabeth Olsen) and Vision (Paul Bethany) begin to suspect that everything is not as it seems. <br>
+            <br><b>Genre:</b> Superhero, Mystery, Comedy
+            <br><b>Release date:</b> January 15, 2021 (USA)
+            <br><b>Director:</b> Matt Shakman
+            <br><b>No. of Episodes:</b> 9 episodes
+            </p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoA5WUh9FQyGX9-Fk4mqqiKxOwnr1rEt3pkBYkDUgJP6KCPRUP1z39xmIsDXvda-VB_BToIGzfqnNy1gfPY1e0mKUkOE1FICETxV3pxA&s=10" alt="WandaVision Poster">
+            <p><b>Source:</b> Rotten Tomatoes</p>
+        </div>
+        <div class="media-item">
+            <div class="video"><iframe src="https://www.youtube.com/embed/wD4b2QX5S4I?si=-L-OO3RGyDA8AdBP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <h2>The Umbrella Academy (2019-2024)</h2>
+            <p><b>Description: <br></b><br>
+            <br><b>Genre:</b> Superhero, Drama, Comedy
+            <br><b>Release date:</b> February 1, 2019 (USA)
+            <br><b>Director:</b> Garry Marshall
+            <br><b>No. of Episodes:</b> 5 seasons, 40 episodes
+            </p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0aPX7LG0K7zagRuAOhuA8WFg2rnEfipv9xg&s" alt="The Umbrella Academy Poster">
+            <p><b>Source: </b>Wikipedia</p>
+        </div>
+        <!---<div class="media-item">
+            <div class="video"></div>
+            <h2></h2>
+            <p><b>Description: <br></b><br>
+            <br><b>Genre:</b>
+            <br><b>Release date:</b>
+            <br><b>Director:</b>
+            <br><b>No. of Episodes:</b>
+            </p>
+            <img src="" alt="">
+            <p><b>Source: </b></p>
+        </div>--->
+    </div>
+</div>
 </body>
 </html>
