--- a/Biography/biography.html
+++ b/Biography/biography.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../CSS/blog-style.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/regular/style.css"/>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/fill/style.css"/>
@@ -17,10 +18,11 @@
         <label for="menu-toggle" class="menu-symbol">
             <i class="ph ph-list"></i> </label>
         <div class="nav-links">
-            <a href="../index.html#">Home</a>
-            <a href="../index.html#blogs">Blogs</a>
-            <a href="../Images/gallery.html">Gallery</a>
-            <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
+            <a href="../index.html"><i class="bi bi-house"></i> Home</a>
+            <a href="../index.html#blogs"><i class="bi bi-journal-text"></i> Blogs</a>
+            <a href="../index.html#my-favorites"><i class="bi bi-star"></i> Favorites</a>
+            <a href="../Images/gallery.html"><i class="bi bi-images"></i> Gallery</a>
+            <a href="#contact-info" id="contact-me"><i class="bi bi-envelope"></i> Contact Me</a>
         </div>
     </nav>
     <div class="content">
@@ -30,9 +32,9 @@
         <div class="table-of-contents">
             <h2>Table of Contents:</h2>
             <ol type="A">
-                <li><a href="#childhood">Childhood</a></li>
-                <li><a href="#teenage-years">Teenage Years</a></li>
-                <li><a href="#college-years">College Years</a></li>
+                <li><a href="#childhood"><i class="bi bi-balloon-heart"></i> Childhood</a></li>
+                <li><a href="#teenage-years"><i class="bi bi-emoji-sunglasses"></i> Teenage Years</a></li>
+                <li><a href="#college-years"><i class="bi bi-mortarboard"></i> College Years</a></li>
             </ol>
         </div>
 
@@ -106,6 +108,13 @@
             </figure>
         </div>
         <p>Now, in <em>college</em> came a lot of new experiences.<sup>1</sup> I consider my senior high school a part of my journey in this phase because it happened after the pandemic and after I adjusted to the new normal.<sup>2</sup> Interestingly, I was able to travel a lot more after the pandemic, with my family going to boracay once and even the small travels for school projects and such.<sup>3</sup> There was a hint of anxiety trying new things, like riding the jeepney, which was uncommon for me because as a kid I didn't have to go alone, and as a teen I was mostly home.<sup>4</sup> The first time I went home at night was during my senior high school as well, with 7:30PM class dismissals and the eventual 9PM schedule due to my commitment to <abbr title="University of the East Chorale">UE Chorale</abbr>, which until now I still am a part of.<sup>5</sup> It was during this time that I had my first real group of friends, who may have been a bit too influential to me, having me try new things <i>(I regret, like trying alcohol when I turned 18)</i>.<sup>6</sup> It wasn't the best, but I learned so much from just those two years of senior high school.<sup>7</sup> College is a different story.<sup>8</sup> The experience was so different from senior high, as my blockmates and friends from the class were more mature and reserved.<sup>9</sup> I barely see any drama that was so common during the senior high phase.<sup>10</sup> It was at this time that I felt like I had full control over my own life, with the course that I love and the scholarships to keep me going (DOST and from <abbr title="University of the East Chorale">UE Chorale</abbr>).<sup>11</sup> I felt that life was more real, and that things will keep on becoming more “real”, as some choices do lead to so much more.<sup>12</sup> I found love during this time, and with just a simple interaction, we became more than I ever dreamed of in a partner.<sup>13</sup> I wasn't exactly waiting or trying to find someone, rather it just happened.<sup>14</sup> And even after a year and counting, we're still together and still staying strong.<sup>15</sup> It was a decision that showed me that life is “real” and the things I choose change the course of my life, sometimes for the better, as with my partner.<sup>16</sup> My world grew from just myself to an ever-expanding possibility, and it pushed me to be more than what I used to be.<sup>17</sup> I may not have had a <b>“fun”</b> childhood or that <b>“YOLO”</b> teenage years but I certainly crossed a lot of things in the <u>College Journey Checklist</u> everyone claims to be “canon college events” that everyone seems to get.<sup>18</sup> I'm able to find better and more sustainable friendships, get a healthy relationship, and have a stable journey towards the next parts of my life with the career I love.<sup>19</sup> It may not have been the best past, but one thing I learned from all of this is that I can change the future and make it better.<sup>20</sup></p>
-        <a href="#" class="back-to-top" id="back-to-top">Back to Top &#8593;</a>
     </div>
+    <footer id="contact-info">
+        <p>Contact Information:</p>
+        <div class="footer-links">
+            <a href="mailto:obillomonandrei@ue.edu.ph"><i class="bi bi-envelope"></i> Email</a>
+            <a href="https://www.facebook.com/Mon.Andrei.Obillo"><i class="bi bi-facebook"></i> Facebook</a>
+        </div>
+    </footer>
+    <a href="#" class="back-to-top" id="back-to-top"><i class="bi bi-arrow-up-circle"></i> Back to Top</a>
 </body>
