--- a/Blog Stories Pages/personal.html
+++ b/Blog Stories Pages/personal.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../CSS/blog-style.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/regular/style.css"/>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/fill/style.css"/>
@@ -19,11 +20,12 @@
         <label for="menu-toggle" class="menu-symbol">
             <i class="ph ph-list"></i> </label>
         <div class="nav-links">
-            <a href="../index.html">Home</a>
-            <a href="../Biography/biography.html">About Me</a>
-            <a href="../index.html#blogs">Blogs</a>
-            <a href="../Images/gallery.html">Gallery</a>
-            <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
+            <a href="../index.html"><i class="bi bi-house"></i> Home</a>
+            <a href="../Biography/biography.html"><i class="bi bi-person"></i> About Me</a>
+            <a href="../index.html#blogs"><i class="bi bi-journal-text"></i> Blogs</a>
+            <a href="../index.html#my-favorites"><i class="bi bi-star"></i> Favorites</a>
+            <a href="../Images/gallery.html"><i class="bi bi-images"></i> Gallery</a>
+            <a href="#contact-info" id="contact-me"><i class="bi bi-envelope"></i> Contact Me</a>
         </div>
     </nav>
     <div class="content">
@@ -59,7 +61,14 @@
         <p>
             Even now, in the middle of my college journey, I still do play minecraft. I do so every now and then, and I'm still fond of it. I'm quite proud, albeit with a bit of regret, that I achieved what my younger self just dreamed of and barely got to do so. Minecraft is a huge part of who I am, representing a part of me that just wanted to experience the magic and the fun of building and taking on adventures. I can't just let go of that part of me, so call me childish, but I'm still an avid minecraft player.
         </p>
-        <a href="#" class="back-to-top" id="back-to-top">Back to Top &#8593;</a>
     </div>
+    <footer id="contact-info">
+        <p>Contact Information:</p>
+        <div class="footer-links">
+            <a href="mailto:obillomonandrei@ue.edu.ph"><i class="bi bi-envelope"></i> Email</a>
+            <a href="https://www.facebook.com/Mon.Andrei.Obillo"><i class="bi bi-facebook"></i> Facebook</a>
+        </div>
+    </footer>
+    <a href="#" class="back-to-top" id="back-to-top"><i class="bi bi-arrow-up-circle"></i> Back to Top</a>
 </body>
 </html>
