--- a/Blog Stories Pages/tech.html
+++ b/Blog Stories Pages/tech.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../CSS/blog-style.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/regular/style.css"/>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/fill/style.css"/>
@@ -19,11 +20,12 @@
         <label for="menu-toggle" class="menu-symbol">
             <i class="ph ph-list"></i> </label>
         <div class="nav-links">
-            <a href="../index.html">Home</a>
-            <a href="../Biography/biography.html">About Me</a>
-            <a href="../index.html#blogs">Blogs</a>
-            <a href="../Images/gallery.html">Gallery</a>
-            <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
+            <a href="../index.html"><i class="bi bi-house"></i> Home</a>
+            <a href="../Biography/biography.html"><i class="bi bi-person"></i> About Me</a>
+            <a href="../index.html#blogs"><i class="bi bi-journal-text"></i> Blogs</a>
+            <a href="../index.html#my-favorites"><i class="bi bi-star"></i> Favorites</a>
+            <a href="../Images/gallery.html"><i class="bi bi-images"></i> Gallery</a>
+            <a href="#contact-info" id="contact-me"><i class="bi bi-envelope"></i> Contact Me</a>
         </div>
     </nav>
     <div class="content">
@@ -54,7 +56,14 @@
         <h2>If I had a choice?</h2>
         <p>I couldn’t buy a new laptop because of financial reasons, but if I could, I would prioritize <b>good build quality</b> and <b>solid specs</b>. At the very least, I’d go for an <u>Intel Core i7</u>, around <u>16GB of RAM</u>, and a dedicated graphics card. I’d also choose a laptop with a metal casing and make sure the hinges would last. If I had more options, a durable, high-quality screen and a good keyboard would be a huge plus. I would rather invest in a great gadget than save money and deal with endless frustration in the future. This experience taught me that quality is better than quantity, and that spending more upfront while considering your needs is much better than settling for something cheaper but unreliable.
         </p>
-        <a href="#" class="back-to-top" id="back-to-top">Back to Top &#8593;</a>
     </div>
+    <footer id="contact-info">
+        <p>Contact Information:</p>
+        <div class="footer-links">
+            <a href="mailto:obillomonandrei@ue.edu.ph"><i class="bi bi-envelope"></i> Email</a>
+            <a href="https://www.facebook.com/Mon.Andrei.Obillo"><i class="bi bi-facebook"></i> Facebook</a>
+        </div>
+    </footer>
+    <a href="#" class="back-to-top" id="back-to-top"><i class="bi bi-arrow-up-circle"></i> Back to Top</a>
 </body>
 </html>
