--- a/Images/gallery.html
+++ b/Images/gallery.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../CSS/gallery.css">
     <title>Photo Dump</title>
 </head>
@@ -17,10 +18,11 @@
         <label for="menu-toggle" class="menu-symbol">
             <i class="ph ph-list"></i> </label>
         <div class="nav-links">
-            <a href="../index.html#">Home</a>
-            <a href="../Biography/biography.html">About Me</a>
-            <a href="../index.html#blogs">Blogs</a>
-            <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
+            <a href="../index.html"><i class="bi bi-house"></i> Home</a>
+            <a href="../Biography/biography.html"><i class="bi bi-person"></i> About Me</a>
+            <a href="../index.html#blogs"><i class="bi bi-journal-text"></i> Blogs</a>
+            <a href="../index.html#my-favorites"><i class="bi bi-star"></i> Favorites</a>
+            <a href="#contact-info" id="contact-me"><i class="bi bi-envelope"></i> Contact Me</a>
         </div>
     </nav>
     <div class="content">
@@ -183,7 +185,14 @@
             </a>
         </div>
     </div>
-    <a href="#" class="back-to-top" id="back-to-top">Back to Top &#8593;</a>
+    <footer id="contact-info">
+        <p>Contact Information:</p>
+        <div class="footer-links">
+            <a href="mailto:obillomonandrei@ue.edu.ph"><i class="bi bi-envelope"></i> Email</a>
+            <a href="https://www.facebook.com/Mon.Andrei.Obillo"><i class="bi bi-facebook"></i> Facebook</a>
+        </div>
+    </footer>
+    <a href="#" class="back-to-top" id="back-to-top"><i class="bi bi-arrow-up-circle"></i> Back to Top</a>
 
 </body>
 </html>
