--- a/MediaPages/beats.html
+++ b/MediaPages/beats.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../CSS/media-page-style.css">
     <title>My Beats - Obillo</title>
 </head>
@@ -18,11 +19,12 @@
         <label for="menu-toggle" class="menu-symbol">
             <i class="ph ph-list"></i> </label>
         <div class="nav-links">
-            <a href="../index.html#">Home</a>
-            <a href="../Biography/biography.html">About Me</a>
-            <a href="../index.html#blogs">Blogs</a>
-            <a href="../Images/gallery.html">Gallery</a>
-            <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
+            <a href="../index.html"><i class="bi bi-house"></i> Home</a>
+            <a href="../Biography/biography.html"><i class="bi bi-person"></i> About Me</a>
+            <a href="../index.html#blogs"><i class="bi bi-journal-text"></i> Blogs</a>
+            <a href="../index.html#my-favorites"><i class="bi bi-star"></i> Favorites</a>
+            <a href="../Images/gallery.html"><i class="bi bi-images"></i> Gallery</a>
+            <a href="#contact-info" id="contact-me"><i class="bi bi-envelope"></i> Contact Me</a>
         </div>
     </nav>
     <div class="content">
@@ -45,6 +47,13 @@
             <div class="media-item"><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/3THVfoVD5kdCxPviVaCPi7?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
         </div>
     </div>
-    <a href="#" class="back-to-top" id="back-to-top">Back to Top &#8593;</a>
+    <footer id="contact-info">
+        <p>Contact Information:</p>
+        <div class="footer-links">
+            <a href="mailto:obillomonandrei@ue.edu.ph"><i class="bi bi-envelope"></i> Email</a>
+            <a href="https://www.facebook.com/Mon.Andrei.Obillo"><i class="bi bi-facebook"></i> Facebook</a>
+        </div>
+    </footer>
+    <a href="#" class="back-to-top" id="back-to-top"><i class="bi bi-arrow-up-circle"></i> Back to Top</a>
 </body>
 </html>
